Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-19080

ll_shrinker_create() does not compile for 5.14.0-503.40.1

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

        CC [M]  /home/vs/whamcloud/lustre-release/libcfs/libcfs/../../lustre_compat/mm/shrinker_debug.o
      In file included from ./include/linux/build_bug.h:5,
                       from ./include/linux/bits.h:23,
                       from ./include/linux/bitops.h:6,
                       from ./include/linux/radix-tree.h:11,
                       from ./include/linux/idr.h:15,
                       from /home/vs/whamcloud/lustre-release/libcfs/libcfs/../../lustre_compat/mm/shrinker_debug.c:8:
      /home/vs/whamcloud/lustre-release/libcfs/libcfs/../../lustre_compat/mm/shrinker_debug.c: In function 'll_shrinker_create':
      /home/vs/whamcloud/lustre-release/libcfs/libcfs/../../lustre_compat/mm/shrinker_debug.c:268:33: error: 's' undeclared (first use in this function); did you mean 's8'?
        268 |         LIBCFS_ALLOC(s, sizeof(*s));
            |                                 ^
      

            simmonsja James A Simmons
            vsaveliev Vladimir Saveliev
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: