LU-19080 compat: match kernel shrinker protocol

With the removal of RHEL7 we can now rework the shrinker code to
match the latest kernels. ll_shrinker_create() are broken into
two functions, ll_shrinker_alloc() and ll_shrinker_register().

Signed-off-by: James Simmons <jsimmons@infradead.org>
Change-Id: I885c7521e89c279b8df1385d0ed3b46f98880967
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/60352
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Timothy Day <timday@amazon.com>